add .sezione, .box, .sconto css

--- a/index.html
+++ b/index.html
@@ -6,32 +6,37 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-  <div class="container">
-    <!-- inizio contenuto -->
 
+    <!-- inizio contenuto -->
     <main>
+      <div class="container">
+
+
 
 <!-- sezione top -->
       <section class="sezione A">
-        <img src="img/pd1.jpg" alt="ipad">
-        <img src="img/pd2.jpg" alt="smartphone">
-        <img src="img/pd3.jpg" alt="headphones">
+          <div class="box">
+            <img src="img/pd1.jpg" alt="ipad">
+            <div class="sconto">
+              -30%
+            </div>
+          </div>
+          <div class="box">
+            <img src="img/pd1.jpg" alt="ipad">
+          </div>
+          <div class="box">
+            <img src="img/pd1.jpg" alt="ipad">
+          </div>
 
-      </section>
 
-<!-- sezione bottom -->
-
-      <section class="sezione B">
-        <img src="img/pd1.jpg" alt="ipad">
-        <img src="img/pd2.jpg" alt="smartphone">
-        <img src="img/pd3.jpg" alt="headphones">
 
       </section>
 
 <!-- fine contenuto -->
-
+      </div>
     </main>
-  </div>
+
+
 
 
 
