inserted correct img html sezione A

--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
     <main>
       <div class="container">
 
-
-
 <!-- sezione top -->
       <section class="sezione A">
           <div class="box">
@@ -22,10 +20,10 @@
             </div>
           </div>
           <div class="box">
-            <img src="img/pd1.jpg" alt="ipad">
+            <img src="img/pd2.jpg" alt="smartphone">
           </div>
           <div class="box">
-            <img src="img/pd1.jpg" alt="ipad">
+            <img src="img/pd3.jpg" alt="cuffie">
           </div>
 
 
