add  correct discount all .box html

--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
 
 <!-- sezione top -->
       <section class="sezione A">
+
           <div class="box">
             <img src="img/pd1.jpg" alt="ipad">
-            <div class="sconto">
-              -30%
-            </div>
+            <div class="sconto">-30%</div>
           </div>
+
           <div class="box">
             <img src="img/pd2.jpg" alt="smartphone">
+            <div class="sconto">-5%</div>
           </div>
           <div class="box">
             <img src="img/pd3.jpg" alt="cuffie">
+            <div class="sconto">-30%</div>
           </div>
 
 
